source/project-maze/style.css
body {
  margin: 0;
  font-family: 'Cormorant Garamond', serif;
  font-size: 23px;
  line-height: 1.5em;
  color: white;
}

body main {
  padding-top: 35px;
  border-top: 5px solid black;
  border-bottom: 5px solid black;
  background-color: #002b2b;
  background: url("img/bg.jpg") no-repeat center;
  background-size: cover;
}

.page-header {
  padding: 10px;
  background: #003b3b;
}

.page-header h1 {
  text-align: center;
}

button {
  font-family: inherited;
  color: white;
  padding: 5px 20px;
  border-radius: 5px;
  background-color: #573;
}

button:hover {
  background-color: #8a5;
  cursor: pointer;
}

button:active {
  background-color: #28513C;
}

.quit-game {
    display: none;
}

.description {
  padding: 5px 30px;
  margin-bottom: 200px;
  background-color: rgba(47, 79, 79, 0.8);
  border-radius: 10px;
}

div.maze-wrapper {
  width: 800px;
  margin: 0 auto;
  background: #28513C;
  border: 1px solid black;
  border-radius: 10px;
}

.maze-container {
  scroll-behavior: smooth;
  position: relative;
  overflow: hidden;
  margin-left: 260px;
}

.maze {
  display: table;
  margin: 0 auto;
}

.maze-row {
  display: flex;
}

.maze-cell {
  display: flex;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
}

.maze-cell img {
  display: block;
}

.maze-cell:hover {
  background-color: RosyBrown;
}

.maze-cell.attainable:hover {
  background: steelblue;
}

.maze-cell.player:hover {
  background-color: gray;
}

.maze-cell.blood {
  position: relative;
}

.maze-cell.blood img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.page-footer {
  padding: 5px;
  background: #002b2b;
}

.page-footer a {
  text-decoration: none;
  color: white;
}

.page-footer a:hover {
  text-decoration: underline;
  color: yellow;
}

.layout-positioner {
  width: 800px;
  margin: 0 auto;
}

.copyright {
  float: left;
}

.contacts-footer {
  float: right;
}

.clearfix::after {
  content: "";
  display: table;
  clear: both;
}

main h2 {
  text-align: center;
}

.description p:first-of-type::first-letter {
  font-size: 50px;
  float: left;
  margin-right: 1px;
}

.description p:not(:first-of-type)::first-letter {
  margin-left: 35px;
}

.console {
  display: none;
  height: 100px;
  color: gray;
  background-color: rgba(0, 0, 0, 0.5);
}

.console p {
  margin: 0;
  margin-left: 20px;
}

.console p:first-child {
  color: yellow;
}

.game-info {
  display: none; /* flex */
  padding-left: 10px;
  padding-right: 10px;
  flex-direction: column;
  justify-content: space-between;
  float: left;
  width: 260px;
  background-color: rgba(0, 0, 0, 0.5);
}

.stats h3 {
  text-align: center;
}

.stats output {
  color: yellow;
  font-size: 1.5em;
}

div.menu {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 100;
  display: flex;
  justify-content: center;
}

button.menu-option {
  font-size: 1em;
}

button.menu-option.next-level {
  display: none;
}

.button-wrapper {
    margin-top: 50px;
    margin-bottom: 300px;
    display: flex;
    justify-content: center;
}

.new-game-button {
    font-size: 1em;
}

.avatars-list {
  display: flex;
  z-index: 100;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 130px;
  margin-left: 10px;
  margin-bottom: 10px;
  background-color: #909090;
  border: 3px solid #08311C;
  border-radius: 5px;
}

.avatar:hover {
  cursor: pointer;
  border: 3px solid #28513C;
  background-color: #b0b0b0;
}

.avatar.selected {
  width: 120px;
  height: 150px;
  border: 4px solid gold;
  background-color: steelblue;
}

.avatar img {
  width: 100px;
}

.avatar:hover img {
  width: 120px;
}

.avatar.selected img {
  width: 120px;
}

.health-layout {
  display: none; /* flex */
  padding: 10px;
  justify-content: space-between;
  background-color: rgba(0, 0, 0, 0.5);
}

.health {
  
}

.health-bar-layout {
  width: 250px;
  padding: 1px;
  border: 2px solid darkgray;
  background: #200;
}

.health-bar {
  width: 100%;
  height: 15px;
  background-color: red;
}

.health h3 {
  margin: 0;
  text-align: center;
}

.enemy-health {
  visibility: hidden;
}

